# cloud-app

./: .gitignore  Dockerfile  cloud-app.yml  main.tf  outputs.tf  pyproject.toml  run.py  variables.tf
.github/workflows/: docker-image.yml  docker-publish.yml  main.yml  terraform-apply.yml  terraform-plan.yml
cloud_app/: app.py
roles/cloud_app/defaults/: main.yml
roles/cloud_app/handlers/: main.yml
roles/cloud_app/tasks/: main.yml
roles/cloud_app/tests/: test.yml
roles/cloud_app/vars/: main.yml
